@@ -7,7 +7,7 @@
 
 <body>
 <h1>PRADO Framework for PHP 5 </h1>
-<p>Version 3.0RC1, April 5, 2006<br>
+<p>Version 3.0.0RC2, April 16, 2006<br>
 Copyright&copy; 2004-2006 by <a href="http://www.pradosoft.com/">PradoSoft</a><br>
 All Rights Reserved.
 
